Properly shift invisible slides to prevent overlapping

--- a/mini_fiction/frontend/src/css/slides.css
+++ b/mini_fiction/frontend/src/css/slides.css
@@ -82,10 +82,12 @@
 
 input:checked ~ .slide {
     /* Add some transition too?.. */
+    transform: translateX(100%);
 }
 
 input:checked + label + .slide {
     transition: opacity 0.5s ease-in-out;
+    transform: translateX(0);
     opacity: 1;
 }
 
